--- a/src/main/resources/public/styles/style-chat.css
+++ b/src/main/resources/public/styles/style-chat.css
@@ -1,32 +1,28 @@
-body{
-    height:400px;
-    position: fixed;
-    bottom: 0;
+.col-md-2, .col-md-10 {
+    padding: 0;
 }
-.col-md-2, .col-md-10{
-    padding:0;
-}
-.panel{
+.panel {
     margin-bottom: 0px;
 }
-.chat-window{
-    bottom:0;
-    position:fixed;
-    float:right;
-    margin-left:10px;
+.chat-window {
+    bottom: 0;
+    position: fixed;
+    margin-left: 10px;
+    margin-right: 10px;
+    right: 0px;
 }
-.chat-window > div > .panel{
+.chat-window > div > .panel {
     border-radius: 5px 5px 0 0;
 }
-.icon_minim{
-    padding:2px 10px;
+.icon_minim {
+    padding: 2px 10px;
 }
-.msg_container_base{
+.msg_container_base {
     background: #e5e5e5;
     margin: 0;
     padding: 0 10px 10px;
-    max-height:300px;
-    overflow-x:hidden;
+    height: 300px;
+    overflow-x: hidden;
 }
 .top-bar {
     background: #666;
@@ -35,20 +31,20 @@ body{
     position: relative;
     overflow: hidden;
 }
-.msg_receive{
-    padding-left:0;
-    margin-left:0;
+.msg_receive {
+    padding-left: 0;
+    margin-left: 0;
 }
-.msg_sent{
-    padding-bottom:20px !important;
-    margin-right:0;
+.msg_sent {
+    padding-bottom: 20px !important;
+    margin-right: 0;
 }
 .messages {
     background: white;
     padding: 10px;
     border-radius: 2px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-    max-width:100%;
+    max-width: 100%;
 }
 .messages > p {
     font-size: 13px;
@@ -70,7 +66,7 @@ img {
 .avatar {
     position: relative;
 }
-.base_receive > .avatar:after {
+.chatbot_message > .avatar:after {
     content: "";
     position: absolute;
     top: 0;
@@ -82,11 +78,11 @@ img {
     border-bottom-color: rgba(0, 0, 0, 0);
 }
 
-.base_sent {
+.human_message {
     justify-content: flex-end;
     align-items: flex-end;
 }
-.base_sent > .avatar:after {
+.human_message > .avatar:after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -99,32 +95,27 @@ img {
     box-shadow: 1px 1px 2px rgba(black, 0.2); // not quite perfect but close
 }
 
-.msg_sent > time{
+.msg_sent > time {
     float: right;
 }
 
-
-
-.msg_container_base::-webkit-scrollbar-track
-{
+.msg_container_base::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #F5F5F5;
 }
 
-.msg_container_base::-webkit-scrollbar
-{
+.msg_container_base::-webkit-scrollbar {
     width: 12px;
     background-color: #F5F5F5;
 }
 
-.msg_container_base::-webkit-scrollbar-thumb
-{
+.msg_container_base::-webkit-scrollbar-thumb {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
 
-.btn-group.dropup{
-    position:fixed;
-    left:0px;
-    bottom:0;
+.btn-group.dropup {
+    position: fixed;
+    left: 0px;
+    bottom: 0;
 }
