--- a/src/main/resources/public/styles/style-registration.css
+++ b/src/main/resources/public/styles/style-registration.css
@@ -67,7 +67,7 @@ body {
     font-size: .9em;
 }
 
-.submit {
+#submit {
     width: 260px;
     height: 50px;
     background: #015b7e;
@@ -86,6 +86,6 @@ body {
     transition: all .2s ease;
 }
 
-.submit:hover {
+#submit:hover {
     background: #014965;
 }
